<resources>
    <string name="app_name">大大记账本</string>
    <string name="application_initialization_failed">应用初始化失败，请自行配置帐号。</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="op_update_pwd">您正在申请更换手机号</string>
    <!--empty-->
    <string name="empty_data">暂无数据</string>
    <string name="empty_count_data">没有统计到数据</string>
    <string name="empty_account_data">该月还没有记账呢</string>
    <string name="empty_msg_data">暂无消息数据喔~</string>
    <!--Dialog-->
    <string name="dialog_title">提示</string>
    <string name="dialog_affirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_finish">完成</string>
    <string name="dialog_add">申请加入</string>
    <string name="dialog_send_code">发送验证码</string>
    <string name="dialog_title_update_username">修改用户名</string>
    <string name="dialog_title_update_sex">修改性别</string>
    <string name="dialog_title_update_age">修改年龄</string>
    <string name="dialog_content_clear_cache">确认清除缓存吗？</string>
    <string name="dialog_content_login_out">确认退出登录吗？</string>
    <string name="dialog_title_input_bid">输入帐薄 ID</string>
    <string name="dialog_title_select_scene">选择场景</string>
    <string name="dialog_content_delete_book">真的要删除该账簿吗？！删除后该帐薄所相关的账目数据都将删除，请三思！</string>
    <string name="dialog_content_exit_book">确认退出该帐薄吗？</string>
    <string name="dialog_cancel_delete_book">我再想想</string>
    <string name="dialog_affirm_delete_book">删吧，我想好了</string>
    <string name="dialog_content_delete_account">确认删除该账目吗？</string>
    <string name="dialog_title_update_pwd">修改账户密码</string>
    <string name="dialog_title_update_phone">修改手机号</string>
    <string name="dialog_item_refuse_apply">拒绝申请</string>
    <string name="dialog_item_delete_msg">删除消息</string>
    <string name="dialog_item_edit_account">编辑账目</string>
    <string name="dialog_item_delete_account">删除账目</string>
    <string name="dialog_item_edit_book">编辑帐薄</string>
    <string name="dialog_item_delete_book">删除账薄</string>
    <string name="dialog_item_exit_book">退出账薄</string>
    <string name="dialog_delete_type">确认删除该分类吗？</string>
    <string name="dialog_title_update_theme">修改主题色</string>
    <!--Loading-->
    <string name="load_msg">正在加载中&#8230;</string>
    <string name="load_update">正在修改中&#8230;</string>
    <string name="load_delete">正在删除中&#8230;</string>
    <string name="load_send_code">正在发送验证码&#8230;</string>
    <string name="load_verify">正在验证中&#8230;</string>
    <string name="load_switch">正在切换中&#8230;</string>
    <string name="load_login">正在登录中&#8230;</string>
    <!--标题名-->
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_forget_password">找回密码</string>
    <string name="title_user_info">个人资料</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于大大记账本</string>
    <string name="title_account_books">帐薄</string>
    <string name="title_add_share_user">邀请好友</string>
    <string name="title_add_book">添加帐薄</string>
    <string name="title_edit_book">编辑帐薄</string>
    <string name="title_msg">消息</string>
    <string name="title_edit_cost_type">编辑支出分类</string>
    <string name="title_edit_income_type">编辑收入分类</string>
    <string name="title_add_type">添加分类</string>
    <string name="title_edit_type">编辑分类</string>
    <!--Hint-->
    <string name="hint_empty">输入的内容不能为空</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_receive_code">请输入收到的验证码</string>
    <string name="hint_right_phone">手机号输入有误</string>
    <string name="hint_right_password">密码输入有误(6&#8211;16位字母数字组合)</string>
    <string name="hint_right_code">验证码输入有误</string>
    <string name="hint_right_phone_or_password">请输入正确的手机号或密码</string>
    <string name="hint_verify_phone">手机号未验证，请先验证。</string>
    <string name="hint_input_book_name">请输入帐薄名称</string>
    <string name="hint_input_book_id">请输入帐薄 ID</string>
    <string name="hint_select_book_scene">请选择帐薄使用场景</string>
    <string name="hint_input_new_pwd">请输入新密码(6&#8211;16位字母数字组合)</string>
    <string name="hint_input_new_phone">请输入新手机号</string>
    <string name="hint_input_type_name">请输入分类名称</string>
    <!--土司-->
    <string name="toast_right_phone">请输入正确的手机号</string>
    <string name="toast_right_code">请输入正确的验证码</string>
    <string name="toast_input_name_or_pwd">请输入用户名或密码</string>
    <string name="toast_right_password">密码输入有误(6&#8211;16位字母数字组合)</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_fail">登录失败</string>
    <string name="toast_register_success">恭喜您，注册成功~</string>
    <string name="toast_register_fail">注册失败</string>
    <string name="toast_get_code_success">获取验证码成功</string>
    <string name="toast_send_code">验证码已发送</string>
    <string name="toast_verify_phone_success">手机号验证成功</string>
    <string name="toast_update_password_success">密码修改成功</string>
    <string name="toast_update_phone_success">手机号修改成功</string>
    <string name="toast_save_success">保存成功</string>
    <string name="toast_save_fail">保存失败</string>
    <string name="toast_username_length">请输入1&#8211;16位的用户名</string>
    <string name="toast_update_success">修改成功</string>
    <string name="toast_update_fail">修改失败</string>
    <string name="toast_upload_fail">上传失败</string>
    <string name="toast_clear_cache_success">清理成功</string>
    <string name="toast_login_out_success">退出成功</string>
    <string name="toast_add_fail_login_reset">添加失败，请重新登录后重试</string>
    <string name="toast_copy_success_send_friend">复制成功，快发送给你的亲友吧~</string>
    <string name="toast_input_bid_error">帐薄 ID 输入有误</string>
    <string name="toast_add_share_book_fail">加入失败</string>
    <string name="toast_add_share_book_success">加入成功</string>
    <string name="toast_apply_success">申请成功！请等待对方审核~</string>
    <string name="toast_has_apply_book">已申请加入，请等待对方审核~</string>
    <string name="toast_query_book_empty">账簿 ID 没有对应的账簿</string>
    <string name="toast_has_add_share_book">帐薄里已经有你咯(=・ω・=)</string>
    <string name="toast_input_book_name">请输入账簿名称</string>
    <string name="toast_select_book_scene">请选择账簿场景</string>
    <string name="toast_select_book_cover">请选择账簿封面</string>
    <string name="toast_add_success">添加成功</string>
    <string name="toast_edit_success">修改成功</string>
    <string name="toast_exit_success">退出成功</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_phone_not_equal">新手机号不能和当前手机号相同</string>
    <string name="toast_agree_success">操作成功，你们可以开始一起记账了~</string>
    <string name="toast_operate_success">操作成功</string>
    <string name="toast_has_agree">对方已加入该帐薄~</string>
    <string name="toast_input_type_name">请输入分类名称</string>
    <string name="toast_select_type_icon">请选择分类图标</string>

    <!--other-->
    <string name="rmb">¥</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="get_code">获取验证码</string>
    <string name="reset_get">重新获取</string>
    <string name="verify_phone">验证手机号</string>
    <string name="verify">验证</string>
    <string name="finish">完成</string>
    <string name="income">收入</string>
    <string name="cost">支出</string>
    <string name="save">保存</string>
    <string name="money_normal">0.00</string>
    <string name="say_something">说点什么吧&#8230;</string>
    <string name="cur_month_cost">当月支出</string>
    <string name="cur_month_income">当月收入</string>
    <string name="icon">头像</string>
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="not_set">未设置</string>
    <string name="year">岁</string>
    <string name="setting">设置</string>
    <string name="home">首页</string>
    <string name="account_books">帐薄</string>
    <string name="count">统计</string>
    <string name="feedback">反馈</string>
    <string name="other">其他</string>
    <string name="clear_cache">清除缓存</string>
    <string name="update_phone">修改手机号</string>
    <string name="update_password">修改账户密码</string>
    <string name="update_theme">修改主题色</string>
    <string name="about_app">关于大大记账本</string>
    <string name="login_out">退出登录</string>
    <string name="developers">Developers</string>
    <string name="airsaid">Airsaid</string>
    <string name="github_link">https://github.com/Airsaid</string>
    <string name="add">添加</string>
    <string name="cur_account_books">当前帐薄</string>
    <string name="def_book_name">日常帐薄</string>
    <string name="def_book_scene">日常</string>
    <string name="def_book_cover">book_icon1</string>
    <string name="hint_add_share_user">帐薄 ID 是每个帐薄用来共享的号码，想要你的亲友一起来记账，只需把帐薄 ID 发给亲友，亲友可在 “帐薄” 页点击右上角菜单，选择加入记账，即可开始共同记账。</string>
    <string name="book_id_sign">账簿ID：</string>
    <string name="copy_book_id">复制账簿ID</string>
    <string name="add_account_book">添加账簿</string>
    <string name="add_share_book">加入记账</string>
    <string name="book_name">帐薄名称</string>
    <string name="book_scene">帐薄场景</string>
    <string name="select_book_cover">选择封面</string>
    <string name="delete_book">删除帐薄</string>
    <string name="agree">同意</string>
    <string name="apply_book_sign">对方申请加入「%1$s」帐薄。</string>
    <string name="msg_agree_book_apply">对方同意了您的加入记账申请，您已经成功加入了「%1$s」帐薄。</string>
    <string name="msg_refuse_book_apply">很抱歉，对方拒绝了您加入账簿（账簿 ID：%1$s）的申请。</string>
    <string name="booK_has_delete">该帐薄已删除</string>
    <string name="delete_msg">删除消息</string>
    <string name="system_message">系统消息</string>
    <string name="total_cost_sign">总支出：</string>
    <string name="total_income_sign">总收入：</string>
    <string name="custom">自定义</string>
    <string name="type_name">分类名称</string>
    <string name="select_type_image">选择分类图标</string>
    <string name="pie_chart">饼状图</string>
    <string name="line_chart">线性图</string>
    <string name="total_cost_chart">(总支出)</string>
    <string name="total_income_chart">(总收入)</string>
    <string name="just_look_me">统计我的所有账目</string>
    <string name="just_look_cur_book">统计「当前帐薄」所有账目</string>
    <string name="just_look_cur_book_me">统计「当前帐薄」我的账目</string>
</resources>
