<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account_books"
            android:icon="@mipmap/ic_nav_account_books"
            android:title="@string/account_books"/>
        <item
            android:id="@+id/nav_count"
            android:icon="@mipmap/ic_nav_count"
            android:title="@string/count"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_nav_feedback"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_nav_set"
                android:title="@string/setting"/>
        </menu>
    </item>
</menu>
