<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/elevation_height"
        android:outlineProvider="paddedBounds"
        android:padding="15dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/ic_cost_type_0"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/textBrown"
            android:textSize="@dimen/text16"
            tools:text="@string/app_name"/>

        <TextView
            android:id="@+id/txt_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/money_normal"
            android:textColor="@color/textPink"
            android:textSize="@dimen/text20"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:overScrollMode="never"
        android:padding="@dimen/view_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/txt_date"
            style="@style/Text.White"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_text_select_date"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            tools:text="04月1号"/>

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/say_something"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/text14"/>
    </LinearLayout>

</LinearLayout>